--- a/00ExperimentalCosyCoupleUser.Rmd
+++ b/00ExperimentalCosyCoupleUser.Rmd
@@ -15,10 +15,7 @@ output:
     highlight: tango
 ---
 
-
-# Setup
-
-```{r setup, warning=FALSE, message=FALSE, results='hide'}
+```{r setup, message=FALSE, results='hide'}
 
 knitr::opts_chunk$set(echo = TRUE)
 
@@ -35,6 +32,8 @@ library(bayesplot)
 library(beepr)
 library(DHARMa)
 
+
+
 source(file.path('Functions', 'ReportModels.R'))
 source(file.path('Functions', 'PrettyTables.R'))
 source(file.path('Functions', 'ReportMeasures.R'))
@@ -48,18 +47,46 @@ source(file.path('Functions', 'PrepareData.R'))
 
 system("shutdown /a")
 
-# Set options for analys
+# Set options for analysis
 use_mi = FALSE
-shutdown = TRUE
+shutdown = FALSE
 report_ordinal = FALSE
 
 options(
   dplyr.print_max = 100, 
   brms.backend = 'cmdstan',
   brms.file_refit = ifelse(use_mi, 'never', 'on_change'),
+  brms.file_refit = 'on_change',
   #brms.file_refit = 'always',
   error = function() beepr::beep(sound = 5)
 )
+
+
+
+####################### Model parameters #######################
+iterations = 1000
+warmup = 500
+#corstr = 'ar'
+#corstr = 'cosy_couple'
+corstr = 'cosy_couple:user'
+
+
+################################################################
+
+if (corstr == 'ar') {
+  autocor_str <- ~ ar(time = day, gr = coupleID:userID, p = 1)
+  autocor_prior <- brms::set_prior("cauchy(0, 5)", class = "ar", lb = -1, ub = 1) 
+  suffix = paste0('ar_', as.character(iterations))
+} else if (corstr == 'cosy_couple') {
+  autocor_str <- ~ cosy(gr = coupleID)
+  autocor_prior <- brms::set_prior("cauchy(0, 5)", class = "cosy", lb = -1, ub = 1)
+  suffix = paste0('cosy_couple_', as.character(iterations))
+} else if (corstr == 'cosy_couple:user') {
+  autocor_str <- ~ cosy(time = day, gr = coupleID:userID)
+  autocor_prior <- brms::set_prior("cauchy(0, 5)", class = "cosy", lb = -1, ub = 1)
+  suffix = paste0('cosy_couple:user_', as.character(iterations))
+}
+
 
 
 ```
@@ -67,253 +94,13 @@ options(
 
 ```{r prepare_datasets, results='asis'}
 
-df <- openxlsx::read.xlsx('long.xlsx')
+df <- openxlsx::read.xlsx(file.path('long.xlsx'))
 df_original <- df
 
-df_list <- prepare_data(df, use_mi = use_mi)
-df_double <- df_list[[1]]
-df_full <- df_list[[2]]
+# Importantly, we do not recode pushing here. 
+df_double <- prepare_data(df, recode_pushing = TRUE, use_mi = use_mi)[[1]]
 
 ```
-
-
-
-# Descriptives
-
-# Sample Statistics
-
-```{r describe_sample, results='asis'}
-
-# Income (mean of both partner's report)
-merge_income <- function(income1, income2) {
-  merged_income <- numeric(length(income1))
-  
-  # Loop through each pair of incomes
-  for (i in seq_along(income1)) {
-    # Handle NA
-    if (is.na(income1[i])) {
-      merged_income[i] <- income2[i]
-    } 
-    
-    else if (is.na(income2[i])) {
-      merged_income[i] <- income1[i]
-    }
-    
-    # if both are informative, take mean and round
-    else if (income1[i] %in% 1:6 && income2[i] %in% 1:6) {
-      merged_income[i] <- round((income1[i] + income2[i]) / 2)
-    }
-    
-    # if one is informative and the other not, use the informative one. 
-    else if (income1[i] %in% 1:6) {
-      merged_income[i] <- income1[i]
-    }
-    else if (income2[i] %in% 1:6) {
-      merged_income[i] <- income2[i]
-    }
-    
-    # Now we only have cases, where both are either 70 or 99. We simply report "undisclosed". 
-    else {
-      merged_income[i] <- 99
-    }
-  }
-  
-  # Convert to factor
-  merged_income <- factor(
-    merged_income, levels = c(1,2,3,4,5,6,70,99), 
-    labels = c(
-      "up to CHF 2'000.-", 
-      "CHF 2'001.- to CHF 4'000.-",
-      "CHF 4'001.- to CHF 6'000.-",
-      "CHF 6'001.- to CHF 8'000.-",
-      "CHF 8'001.- to CHF 10'000.-", 
-      "above CHF 10'000.-", 
-      "I don't know",
-      "Undisclosed"
-  )
-  )
-  
-  return(merged_income)
-}
-
-
-
-df_sample_report <- df_full %>%
-  group_by(coupleID) %>%
-  arrange(userID) %>%
-  # Computing couple level variables
-  mutate(
-    Household_Income = merge_income(first(pre_income_1), last(pre_income_1)),
-    
-    reldur = pre_rel_duration_m / 12 + pre_rel_duration_y,
-    Relationship_duration = mean(reldur, na.rm = TRUE),
-    
-    habdur = pre_hab_duration_m / 12 + pre_hab_duration_y,
-    Cohabiting_duration = mean(habdur, na.rm = TRUE),
-    
-    Marital_status = factor(
-      case_when(
-        all(pre_mat_stat == 1) ~ "Married",
-        any(pre_mat_stat == 1) ~ "One Partner Married",
-        TRUE ~ "Not Married"
-      )
-    ),
-    
-    Have_children = factor(
-      (first(pre_child_option) + last(pre_child_option)) > 0, 
-      levels = c(FALSE, TRUE), 
-      labels = c('Have Children', 'No Children')),
-    
-    Gender = factor(
-      gender, 
-      levels = c(1,2,3), 
-      labels = c('Male','Female', 'Other')),
-    
-
-
-    Couple_type = as.factor(
-      case_when(
-        first(Gender) == last(Gender) & first(Gender) == 'Male' ~ 'Same-Sex Couple (Male)',
-        first(Gender) == last(Gender) & first(Gender) == 'Female' ~ 'Same-Sex Couple (Female)',
-        TRUE ~ 'Mixed-sex Couple'
-      )
-    )
-  ) %>%
-  ungroup() %>%
-  # Individual level variables
-  mutate(
-    Age = pre_age,
-    Handedness = factor(
-      pre_handedness, 
-      levels = c(0, 1, 2), 
-      c('Right','Left', 'Ambidextrous')),
-  Highest_Education = factor(
-    pre_education, 
-    levels = c(1,2,3,4,5,6,7), 
-    labels = c(
-      "(still) no school diploma",
-      "compulsory education (9 years)",
-      "vocational training (apprenticeship)",
-      "Matura (university entrance qualification)",
-      "Bachelor's degree", 
-      "Master's degree",
-      "Doctorate degree"
-      )
-    ),
-  BMI = pre_weight / ((pre_height / 100)^2) # to meters
-  ) %>%
-  select(c(Relationship_duration, Cohabiting_duration, Couple_type, Household_Income, 
-            Marital_status, Have_children, 
-            Gender, Age, Handedness, Highest_Education, BMI))
-
-
-sample_table <- report_measures(df_sample_report, ICC = F)
-sample_table$n_Obs <- as.numeric(sample_table$n_Obs) / 55
-rownames(sample_table) <- NULL
-
-n_couple_vars <- 17
-sample_table$n_Obs[1:n_couple_vars] <- sample_table$n_Obs[1:n_couple_vars] / 2
-
-packing_sample <- list(
-    "Couple level variables (38 couples)" = 
-      c(1, n_couple_vars),
-    "Individual level variables (76 individuals)" 
-    = c(n_couple_vars+1, nrow(sample_table))
-    ) 
-
-df_sample_summary <- print_df(
-  sample_table,
-  rows_to_pack = packing_sample
-)
-
-export_xlsx(df_sample_summary,
-            file.path('Output', 'SampleDescription.xlsx'),
-            merge_option = 'both',
-            rows_to_pack = packing_sample,
-            colwidths = c(20,35,7,7,7,7,7,10)
-            )
-
-df_sample_summary
-
-```
-
-
-
-## Measures
-
-### Focal Variables
-
-```{r describe_measures_main, results='asis'}
-main_constructs <- c("persuasion", "pressure","pushing", 
-                     "pa_sub", "pa_obj", "aff", "reactance"
-                     )
-
-main_descriptives <- report_measures(
-  data = df_full, 
-  measures = main_constructs,
-  ICC = TRUE, 
-  cluster_var = df_full$userID)
-
-openxlsx::write.xlsx(
-  main_descriptives, 
-  file.path('Output', 'DescriptivesMain.xlsx')
-  )
-
-print_df(main_descriptives)
-
-```
-
-### All Variables
-
-```{r describe_measures_all, results='asis'}
-
-
-
-
-all_constructs <- c(
-  main_constructs,
-  "day",
-  "weartime",
-  "isWeekend",
-  "plan",
-  "studyGroup",
-  "support",
-  "got_JITAI",
-  "skilled_support"
-)
-
-
-all_descriptives <- report_measures(df_full, all_constructs, ICC = F)
-
-openxlsx::write.xlsx(
-  all_descriptives, 
-  file.path('Output', 'DescriptivesAll.xlsx')
-)
-
-print_df(all_descriptives)
-
-```
-
-## Correlations
-
-```{r correlations, results='asis'}
-cors <- wbCorr(df_full[,c(main_constructs)], df_full$coupleID, method = 'spearman')
-
-main_cors <- summary(cors, 'wb')$merged_wb
-
-
-openxlsx::write.xlsx(
-  main_cors, 
-  file.path('Output', 'Correlations.xlsx')
-)
-
-print_df(main_cors, width = '7em')
-
-```
-
-Within-person correlations are above the diagonal and between-person 
-correlations are below the diagonal.  
-On the diagonal are intraclass correlations (ICCs)
 
 
 # Modelling
@@ -366,6 +153,8 @@ model_rows_random <- c(
   'sd(pushing_partner_cw)',
   # '-- CORRELATION STRUCTURE -- ', 
   'ar[1]', 
+  'ma[1]', 
+  'cosy',
   'nu',
   'shape',
   'sderr',
@@ -424,7 +213,9 @@ model_rownames_random <- c(
   'sd(Daily received pushing target -> target)', 
   'sd(Daily received pushing target -> agent)', 
   # '-- CORRELATION STRUCTURE -- ', 
-  'ar[1]', 
+  'ar[1]',
+  'ma[1]', 
+  'cosy',
   'nu',
   'shape',
   'sderr',
@@ -485,6 +276,8 @@ model_rownames_random <- c(
   "sd(Daily pushing utilized (partner's view))", 
   # '-- CORRELATION STRUCTURE -- ', 
   'ar[1]', 
+  'ma[1]', 
+  'cosy',
   'nu',
   'shape',
   'sderr',
@@ -497,13 +290,14 @@ model_rownames_random_ordinal <- c(model_rownames_random,'disc')
 ```
 
 
+
 ```{r parameters_for_printing}
 
 rows_to_pack <- list(
   "Within-Person Effects" = c(2,9),
   "Between-Person Effects" = c(10,16),
   "Random Effects" = c(17, 23), 
-  "Additional Parameters" = c(24,28)
+  "Additional Parameters" = c(24,30)
   )
 
 
@@ -512,8 +306,184 @@ rows_to_pack_ordinal <- list(
   "Within-Person Effects" = c(2+5,9+5),
   "Between-Person Effects" = c(10+5,16+5),
   "Random Effects" = c(17+5, 23+5), 
-  "Additional Parameters" = c(24+5,28+6)
+  "Additional Parameters" = c(24+5,30+6)
   )
+
+```
+
+
+###### HURDLE MODELS
+```{r set_report_order_persuasion_hu}
+
+# For indistinguishable Dyads
+model_rows_fixed_hu <- c(
+    'Intercept', 
+    'hu_Intercept',
+    # '-- WITHIN PERSON MAIN EFFECTS --', 
+    'persuasion_self_cw', 
+    'persuasion_partner_cw', 
+    'pressure_self_cw', 
+    'pressure_partner_cw', 
+    'pushing_self_cw', 
+    'pushing_partner_cw', 
+    'day', 
+    'weartime_self_cw',
+    
+    # '-- BETWEEN PERSON MAIN EFFECTS',
+    'persuasion_self_cb',
+    'persuasion_partner_cb',
+    'pressure_self_cb',
+    'pressure_partner_cb',
+    'pushing_self_cb',
+    'pushing_partner_cb',
+    'weartime_self_cb',
+    
+    # HURDLE MODEL
+    # '-- WITHIN PERSON MAIN EFFECTS --', 
+    'hu_persuasion_self_cw', 
+    'hu_persuasion_partner_cw', 
+    'hu_pressure_self_cw', 
+    'hu_pressure_partner_cw', 
+    'hu_pushing_self_cw', 
+    'hu_pushing_partner_cw', 
+    'hu_day', 
+    'hu_weartime_self_cw',
+    
+    # '-- BETWEEN PERSON MAIN EFFECTS',
+    'hu_persuasion_self_cb',
+    'hu_persuasion_partner_cb',
+    'hu_pressure_self_cb',
+    'hu_pressure_partner_cb',
+    'hu_pushing_self_cb',
+    'hu_pushing_partner_cb',
+    'hu_weartime_self_cb'
+  )
+
+model_rows_random_hu <- c(
+  # '--------------',
+  # '-- RANDOM EFFECTS --',
+  'sd(Intercept)', 
+  'sd(hu_Intercept)',
+  'sd(persuasion_self_cw)',
+  'sd(persuasion_partner_cw)',
+  'sd(pressure_self_cw)',
+  'sd(pressure_partner_cw)',
+  'sd(pushing_self_cw)',
+  'sd(pushing_partner_cw)',
+  # HURDLE
+  'sd(hu_persuasion_self_cw)',
+  'sd(hu_persuasion_partner_cw)',
+  'sd(hu_pressure_self_cw)',
+  'sd(hu_pressure_partner_cw)',
+  'sd(hu_pushing_self_cw)',
+  'sd(hu_pushing_partner_cw)',
+  # '-- CORRELATION STRUCTURE -- ', 
+  'ar[1]', 
+  'ma[1]', 
+  'cosy',
+  'nu',
+  'shape',
+  'sderr',
+  'sigma'
+)
+
+```
+
+
+
+```{r set_display_names_alt_hu}
+
+# For indistinguishable Dyads
+model_rownames_fixed_hu <- c(
+    "Intercept", 
+    "Hurdle Intercept",
+    # "-- WITHIN PERSON MAIN EFFECTS --", 
+    "Daily persuasion experienced", 
+    "Daily persuasion utilized (partner's view)", # OR partner received
+    "Daily pressure experienced", 
+    "Daily pressure utilized (partner's view)", 
+    "Daily pushing experienced", 
+    "Daily pushing utilized (partner's view)", 
+    "Day", 
+    "Daily weartime",
+    
+    # "-- BETWEEN PERSON MAIN EFFECTS",
+    "Mean persuasion experienced", 
+    "Mean persuasion utilized (partner's view)", 
+    "Mean pressure experienced", 
+    "Mean pressure utilized (partner's view)", 
+    "Mean pushing experienced", 
+    "Mean pushing utilized (partner's view)", 
+    "Mean weartime",
+    
+    # HURDLE
+    # "-- WITHIN PERSON MAIN EFFECTS --", 
+    "Hu Daily persuasion experienced", 
+    "Hu Daily persuasion utilized (partner's view)", # OR partner received
+    "Hu Daily pressure experienced", 
+    "Hu Daily pressure utilized (partner's view)", 
+    "Hu Daily pushing experienced", 
+    "Hu Daily pushing utilized (partner's view)", 
+    "Hu Day", 
+    "Hu Daily weartime",
+    
+    # "-- BETWEEN PERSON MAIN EFFECTS",
+    "Hu Mean persuasion experienced", 
+    "Hu Mean persuasion utilized (partner's view)", 
+    "Hu Mean pressure experienced", 
+    "Hu Mean pressure utilized (partner's view)", 
+    "Hu Mean pushing experienced", 
+    "Hu Mean pushing utilized (partner's view)", 
+    "Hu Mean weartime"
+  )
+
+
+model_rownames_random_hu <- c(
+  # '--------------',
+  # '-- RANDOM EFFECTS --',
+  'sd(Intercept)', 
+  'sd(Hurdle Intercept)', 
+  "sd(Daily persuasion experienced)", 
+  "sd(Daily persuasion utilized (partner's view))", # OR partner received
+  "sd(Daily pressure experienced)", 
+  "sd(Daily pressure utilized (partner's view))", 
+  "sd(Daily pushing experienced)", 
+  "sd(Daily pushing utilized (partner's view))", 
+  
+  # Hurdle
+  "sd(Hu Daily persuasion experienced)", 
+  "sd(Hu Daily persuasion utilized (partner's view))", # OR partner received
+  "sd(Hu Daily pressure experienced)", 
+  "sd(Hu Daily pressure utilized (partner's view))", 
+  "sd(Hu Daily pushing experienced)", 
+  "sd(Hu Daily pushing utilized (partner's view))", 
+  # '-- CORRELATION STRUCTURE -- ', 
+  'ar[1]', 
+  'ma[1]', 
+  'cosy',
+  'nu',
+  'shape',
+  'sderr',
+  'sigma'
+)
+
+
+```
+
+
+```{r parameters_for_printing_hu}
+
+rows_to_pack_hu <- list(
+  "Conditional Within-Person Effects" = c(3,10),
+  "Conditional Between-Person Effects" = c(11,17),
+  
+  "Hurdle Within-Person Effects" = c(18,25),
+  "Hurdle Between-Person Effects" = c(26,32),
+  
+  "Random Effects" = c(33, 46), 
+  "Additional Parameters" = c(47,53)
+  )
+
 
 ```
 
@@ -523,14 +493,14 @@ rows_to_pack_ordinal <- list(
 ```{r explore_pa_sub_dist}
 
 range(df_double$pa_sub, na.rm = T) 
-hist(df_double$pa_sub, breaks = 100) 
+hist(df_double$pa_sub, breaks = 40) 
+
+hist(log(df_double$pa_sub+00000000001), breaks = 40)
 
 ```
 
-Modelling using the gaussian family fails. 
-Due to the many zeros, transformations won't help estimating the models. We employ the negative binomial family. 
 
-```{r pa_sub, results='hide', message=FALSE, warning=FALSE}
+```{r pa_sub, results='hide', message=FALSE}
 
 
 formula <- bf(
@@ -546,27 +516,36 @@ formula <- bf(
     day + 
     
     # Random effects
-    (persuasion_self_cw + persuasion_partner_cw +
+    (1 + persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID),
-
-  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1)
-)
-
-
-
+  
+  hu = ~ persuasion_self_cw + persuasion_partner_cw +
+    pressure_self_cw + pressure_partner_cw +
+    pushing_self_cw + pushing_partner_cw +
+    
+    persuasion_self_cb + persuasion_partner_cb +
+    pressure_self_cb + pressure_partner_cb +
+    pushing_self_cb + pushing_partner_cb +
+    
+    day + 
+    
+    # Random effects
+    (1 + persuasion_self_cw + persuasion_partner_cw +
+    pressure_self_cw + pressure_partner_cw +
+    pushing_self_cw + pushing_partner_cw | coupleID)
+  , autocor = autocor_str
+) 
 
 prior1 <- c(
   brms::set_prior("normal(0, 2.5)", class = "b"),
-  brms::set_prior("normal(0, 50)", class = "Intercept", lb = 0),
+  brms::set_prior("normal(0, 50)", class = "Intercept"), # for non-zero PA
+  brms::set_prior("normal(6, 2.5)", class = "Intercept", dpar = 'hu'), # hurdle part
   
   brms::set_prior("normal(0, 10)", class = "sd", group = "coupleID", lb = 0),
   
-  brms::set_prior("cauchy(0, 5)", class = "ar", lb = -1, ub = 1),
-  brms::set_prior("cauchy(0, 20)", class = "shape"), 
-  brms::set_prior("cauchy(0, 10)", class='sderr')
+  autocor_prior
 )
-
 
 #df_minimal <- df_double[, c("AorB", all.vars(as.formula(formula)))]
 
@@ -577,50 +556,48 @@ pa_sub <- my_brm(
   formula = formula, 
   prior = prior1,
   data = df_double, 
-  family = brms::negbinomial(),
-  #control = list(adapt_delta = 0.99),
-  iter = 5000,
-  warmup = 2000,
+  family = brms::hurdle_lognormal(),
+  control = list(adapt_delta = 0.99),
+  iter = iterations,
+  warmup = warmup,
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", "pa_sub")
+  file = file.path("models_cache_brms", paste0("pa_sub_hu_", suffix))
 )
 
 
 ```
 
 
-```{r check_pa_sub, warning=FALSE}
+```{r check_pa_sub}
 
-plot(pa_sub, ask = FALSE)
-plot(pp_check(pa_sub, type = 'ecdf_overlay'))
-plot(pp_check(pa_sub))
-
-pp_check_transformed(pa_sub, transform = log1p)
-
-loo(pa_sub)
+check_brms(pa_sub, log_pp_check = TRUE)
+DHARMa.check_brms.all(pa_sub, integer = TRUE)
 
 ```
 
 
-
-```{r report_pa_sub, results='asis', warning=FALSE}
+```{r report_pa_sub, results='asis'}
 
 summarize_brms(
   pa_sub, 
-  model_rows_fixed = model_rows_fixed,
-  model_rows_random = model_rows_random,
-  model_rownames_fixed = model_rownames_fixed,
-  model_rownames_random = model_rownames_random,
-  exponentiate = T) %>%
-  print_df(rows_to_pack = rows_to_pack)
+  model_rows_fixed = model_rows_fixed_hu,
+  model_rows_random = model_rows_random_hu,
+  model_rownames_fixed = model_rownames_fixed_hu,
+  model_rownames_random = model_rownames_random_hu,
+  exponentiate = T,
+  include_p_direction = T) %>%
+  print_df(rows_to_pack = rows_to_pack_hu
+)
 
 ```
 
 
 
 ## Device Based MVPA 
+
+### Modelling everything at once
 
 ```{r explore_pa_obj_dist}
 
@@ -633,16 +610,11 @@ hist(df_double$pa_obj_log, breaks = 50)
 
 ```
 
-We tried negative binomial here as well for consistency, but the model did not 
-converge. Poisson also did not work. As we have no zeros in this distribution, 
-we log transform. 
 
-
-
-```{r pa_obj_log, results='hide', message=FALSE, warning=FALSE}
+```{r pa_obj_log, results='hide', message=FALSE}
 
 formula <- bf(
-  pa_obj_log ~ 
+  pa_obj ~ 
     persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw +
@@ -656,22 +628,19 @@ formula <- bf(
     # Random effects
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID),
-
-  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1)
+    pushing_self_cw + pushing_partner_cw | coupleID)
+  , autocor = autocor_str
 )
-
 
 
 prior1 <- c(
   brms::set_prior("normal(0, 2.5)", class = "b"),
-  brms::set_prior("normal(0, 50)", class = "Intercept", lb = 0),
-  
-  brms::set_prior("normal(0, 10)", class = "sd", group = "coupleID", lb = 0),
-  
-  brms::set_prior("cauchy(0, 5)", class = "ar", lb = -1, ub = 1),
-  brms::set_prior("cauchy(0, 10)", class = "sigma", lb = 0)
+  brms::set_prior("normal(0, 50)", class = "Intercept"), 
+
+  brms::set_prior("normal(0, 10)", class = "sd", group = "coupleID", lb = 0), # Random effects SD for couple
+  autocor_prior
 )
+
 
 
 #df_minimal <- df_double[, c("AorB", all.vars(as.formula(formula)))]
@@ -683,35 +652,29 @@ pa_obj_log <- my_brm(
   formula = formula, 
   prior = prior1,
   data = df_double, 
-  family = gaussian(),
-  #control = list(adapt_delta = 0.99),
-  iter = 5000,
-  warmup = 2000,
+  family = brms::lognormal(),
+  #control = list(adapt_delta = 0.95),
+  iter = iterations,
+  warmup = warmup,
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", "pa_obj_log")
+  file = file.path("models_cache_brms", paste0("pa_obj_lognormal_", suffix))
 )
 
-
 ```
 
 
-```{r check_pa_obj_log, warning=FALSE}
+```{r check_pa_obj_log}
 
-plot(pa_obj_log, ask = FALSE)
-plot(pp_check(pa_obj_log, type = 'ecdf_overlay'))
-plot(pp_check(pa_obj_log))
-
-#pp_check_transformed(pa_obj_log, transform = log1p)
-
-loo(pa_obj_log)
+check_brms(pa_obj_log, log_pp_check = TRUE)
+DHARMa.check_brms.all(pa_obj_log, integer = TRUE)
 
 ```
 
 
 
-```{r report_pa_obj_log, results='asis', warning=FALSE}
+```{r report_pa_obj_log, results='asis'}
 
 summarize_brms(
   pa_obj_log, 
@@ -719,11 +682,11 @@ summarize_brms(
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = T) %>%
+  exponentiate = T,
+  include_p_direction = T) %>%
   print_df(rows_to_pack = rows_to_pack)
 
 ```
-
 
 
 
@@ -738,7 +701,7 @@ hist(df_double$aff, breaks = 15)
 
 
 
-```{r mood, results='hide', results='hide', message=FALSE, warning=FALSE}
+```{r mood, results='hide', results='hide', message=FALSE}
 
 
 formula <- bf(
@@ -756,22 +719,18 @@ formula <- bf(
     # Random effects
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID),
-
-  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1)
+    pushing_self_cw + pushing_partner_cw | coupleID)
+  , autocor = autocor_str
 )
-
 
 
 prior1 <- c(
   brms::set_prior("normal(0, 5)", class = "b"),
-  brms::set_prior("normal(0, 20)", class = "Intercept", lb=0, ub=6), # range of the outcome scale
+  brms::set_prior("normal(0, 20)", class = "Intercept", lb=1, ub=6), # range of the outcome scale
   
-  brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0),
-
-  brms::set_prior("cauchy(0, 5)", class = "ar", lb = -1, ub = 1),
-  brms::set_prior("cauchy(0, 10)", class = "sigma", lb = 0)
+  brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0), # Random effects SD for couple
   
+  autocor_prior
 )
 
 #df_minimal <- df_double[, c("AorB", all.vars(as.formula(formula)))]
@@ -783,33 +742,28 @@ mood <- my_brm(
   formula = formula, 
   prior = prior1,
   data = df_double, 
-  family = gaussian(),
+  family = brms::skew_normal(),
   #control = list(adapt_delta = 0.95, max_treedepth = 15),
-  iter = 5000,
-  warmup = 2000,
+  iter = iterations,
+  warmup = warmup,
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", "mood")
+  file = file.path("models_cache_brms", paste0("mood_skew_", suffix))
 )
 
 
 ```
 
 
-```{r check_mood, warning=FALSE}
+```{r check_mood}
 
-plot(mood, ask = FALSE)
-plot(pp_check(mood, type = 'ecdf_overlay'))
-plot(pp_check(mood))
-
-#pp_check_transformed(mood, transform = log1p)
-
-loo(pa_sub)
+check_brms(mood, log_pp_check = FALSE)
+DHARMa.check_brms.all(mood, integer = FALSE)
 
 ```
 
-```{r report_mood, results='asis', warning=FALSE}
+```{r report_mood, results='asis'}
 
 summarize_brms(
   mood, 
@@ -817,7 +771,8 @@ summarize_brms(
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = F) %>%
+  exponentiate = F,
+  include_p_direction = T) %>%
   print_df(rows_to_pack = rows_to_pack)
 
 ```
@@ -832,11 +787,13 @@ summarize_brms(
 range(df_double$reactance, na.rm = T) 
 hist(df_double$reactance, breaks = 6)
 
+hist(log(df_double$reactance + 0.0000001))
+
 ```
 
 
 
-```{r reactance, results='hide', message=FALSE, warning=FALSE}
+```{r reactance, results='hide', message=FALSE}
 
 
 formula <- bf(
@@ -854,21 +811,35 @@ formula <- bf(
     # Random effects
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID),
-
-  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1)
+    pushing_self_cw + pushing_partner_cw | coupleID), 
+  
+  hu = ~ persuasion_self_cw + persuasion_partner_cw +
+    pressure_self_cw + pressure_partner_cw +
+    pushing_self_cw + pushing_partner_cw +
+    
+    persuasion_self_cb + persuasion_partner_cb +
+    pressure_self_cb + pressure_partner_cb +
+    pushing_self_cb + pushing_partner_cb +
+    
+    day +
+    
+    # Random effects
+    (persuasion_self_cw + persuasion_partner_cw +
+    pressure_self_cw + pressure_partner_cw +
+    pushing_self_cw + pushing_partner_cw | coupleID)
+  , autocor = autocor_str
 )
 
 
 
 prior1 <- c(
   brms::set_prior("normal(0, 5)", class = "b"),
-  brms::set_prior("normal(0, 20)", class = "Intercept", lb=0, ub=5), # range of the outcome scale
+  brms::set_prior("normal(0, 20)", class = "Intercept"), # for non-zero PA
+  brms::set_prior("normal(20, 10)", class = "Intercept", dpar = 'hu'), # hurdle part
   
-  brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0),
-
-  brms::set_prior("cauchy(0, 5)", class = "ar", lb = -1, ub = 1),
-  brms::set_prior("cauchy(0, 10)", class = "sigma", lb = 0)
+  brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0), # Random effects SD for couple
+  
+  autocor_prior
 )
 
 
@@ -883,42 +854,39 @@ reactance <- my_brm(
   formula = formula, 
   prior = prior1,
   data = df_double, 
-  family = gaussian(),
+  family = brms::hurdle_lognormal(),
   #control = list(adapt_delta = 0.95, max_treedepth = 15),
-  iter = 5000,
-  warmup = 2000,
+  iter = iterations,
+  warmup = warmup,
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", "reactance")
+  file = file.path("models_cache_brms", paste0("reactance_hu_", suffix))
+  #, file_refit = 'always'
 )
 
 
 ```
 
 
-```{r check_reactance, warning=FALSE}
+```{r check_reactance}
 
-plot(reactance, ask = FALSE)
-plot(pp_check(reactance, type = 'ecdf_overlay'))
-plot(pp_check(reactance))
-
-#pp_check_transformed(reactance, transform = log1p)
-
-loo(reactance)
+check_brms(reactance, log_pp_check = T)
+DHARMa.check_brms.all(reactance, integer = FALSE)
 
 ```
 
-```{r report_reactance, results='asis', warning=FALSE}
+```{r report_reactance, results='asis'}
 
 summarize_brms(
   reactance, 
-  model_rows_fixed = model_rows_fixed,
-  model_rows_random = model_rows_random,
-  model_rownames_fixed = model_rownames_fixed,
-  model_rownames_random = model_rownames_random,
-  exponentiate = F) %>%
-  print_df(rows_to_pack = rows_to_pack)
+  model_rows_fixed = model_rows_fixed_hu,
+  model_rows_random = model_rows_random_hu,
+  model_rownames_fixed = model_rownames_fixed_hu,
+  model_rownames_random = model_rownames_random_hu,
+  exponentiate = T,
+  include_p_direction = T) %>%
+  print_df(rows_to_pack = rows_to_pack_hu)
 
 ```
 
@@ -927,6 +895,8 @@ summarize_brms(
 ```{r testingdifferencecoefs}
 
 hypothesis(reactance, "pressure_self_cw > pushing_self_cw")
+hypothesis(reactance, "hu_pressure_self_cw > hu_pushing_self_cw")
+
 
 ```
 
@@ -935,7 +905,7 @@ hypothesis(reactance, "pressure_self_cw > pushing_self_cw")
 ### Ordinal
 
 
-```{r reactance_ordinal, results='hide', message=FALSE, warning=FALSE}
+```{r reactance_ordinal, results='hide', message=FALSE}
 
 df_double$reactance_ordinal <- factor(df_double$reactance,
                                       levels = 0:5, 
@@ -956,21 +926,20 @@ formula <- bf(
     # Random effects
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID),
-
-  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1)
+    pushing_self_cw + pushing_partner_cw | coupleID)
+  , autocor = autocor_str
 )
-
 
 
 prior1 <- c(
-  set_prior("normal(0, 2.5)", class = "b"),
-  set_prior("normal(0, 5)", class = "Intercept"),
-  set_prior("normal(0, 1)", class = "sd", group = "coupleID", lb = 0),
-  set_prior("normal(0, 0.075)", class = "ar", lb = -1, ub = 1),
-  set_prior("normal(0.5, 2.0)", class = "sderr", lb = 0)
-)
+  brms::set_prior("normal(0, 2.5)", class = "b"),
+  #brms::set_prior("normal(0, 10)", class = "Intercept", lb=0, ub=5), # range of the outcome scale
+  
+  brms::set_prior("normal(0, 5)", class = "sd", group = "coupleID", lb = 0), # Random effects SD for couple
+  
+  autocor_prior
 
+)
 
 
 
@@ -984,31 +953,27 @@ reactance_ordinal <- my_brm(
   prior = prior1,
   data = df_double, 
   family = brms::cumulative(),
-  control = list(adapt_delta = 0.95),
-  iter = 5000,
-  warmup = 2000,
+  #control = list(adapt_delta = 0.95),
+  iter = iterations,
+  warmup = warmup,
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", "reactance_ordinal")
+  file = file.path("models_cache_brms", paste0("reactance_ordinal_noar_", suffix))
+  #, file_refit = 'always'
 )
 
 
 ```
 
 
-```{r check_reactance_ordinal, warning=FALSE}
+```{r check_reactance_ordinal}
 
-plot(reactance_ordinal, ask = FALSE)
-plot(pp_check(reactance_ordinal, type = 'ecdf_overlay'))
-plot(pp_check(reactance_ordinal))
+check_brms(reactance_ordinal)
 
-#pp_check_transformed(reactance_ordinal, transform = log1p)
-
-loo(reactance_ordinal)
 ```
 
-```{r report_reactance_ordinal, results='asis', warning=FALSE}
+```{r report_reactance_ordinal, results='asis'}
 
 summarize_brms(
   reactance_ordinal, 
@@ -1016,7 +981,8 @@ summarize_brms(
   model_rows_random = model_rows_random_ordinal,
   model_rownames_fixed = model_rownames_fixed_ordinal,
   model_rownames_random = model_rownames_random_ordinal,
-  exponentiate = T) %>%
+  exponentiate = T,
+  include_p_direction = T) %>%
   print_df(rows_to_pack = rows_to_pack_ordinal)
 
 ```
@@ -1030,7 +996,7 @@ hypothesis(reactance_ordinal, "pressure_self_cw > pushing_self_cw")
 
 ### Binary 
 
-```{r is_reactance, results='hide', message=FALSE, warning=FALSE}
+```{r is_reactance, results='hide', message=FALSE}
 
 introduce_binary_reactance <- function(data) {
   data$is_reactance <- factor(data$reactance > 0, levels = c(FALSE, TRUE), labels = c(0, 1))
@@ -1062,10 +1028,9 @@ formula <- bf(
     # Random effects
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID),
-
-  autocor = ~ ar(time = day, gr = coupleID:userID, p = 1)
-)
+    pushing_self_cw + pushing_partner_cw | coupleID)
+  , autocor = autocor_str
+  )
 
 
 
@@ -1073,10 +1038,9 @@ prior1 <- c(
   brms::set_prior("normal(0, 2.5)", class = "b"),
   brms::set_prior("normal(0, 10)", class = "Intercept", lb=0, ub=5), # range of the outcome scale
   
-  brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0),
-
-  brms::set_prior("cauchy(0, 5)", class = "ar", lb = -1, ub = 1)
-  #brms::set_prior("cauchy(0, 10)", class = "sigma", lb = 0)
+  brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0), # Random effects SD for couple
+  
+  autocor_prior
 )
 
 
@@ -1089,32 +1053,29 @@ is_reactance <- my_brm(
   formula = formula, 
   prior = prior1,
   data = df_double, 
-  family = bernoulli(),
+  family = brms::bernoulli(),
   #control = list(adapt_delta = 0.95, max_treedepth = 15),
-  iter = 5000,
-  warmup = 2000,
+  iter = iterations,
+  warmup = warmup,
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", "is_reactance")
+  file = file.path("models_cache_brms", paste0("is_reactance_noar_", suffix))
+  #, file_refit = 'always'
 )
 
 
 ```
 
-```{r check_is_reactance, warning=FALSE}
+```{r check_is_reactance}
 
-plot(is_reactance, ask = FALSE)
-plot(pp_check(is_reactance, type = 'ecdf_overlay'))
-plot(pp_check(is_reactance))
+check_brms(is_reactance)
+DHARMa.check_brms.all(is_reactance, integer = FALSE)
 
-#pp_check_transformed(is_reactance, transform = log1p)
-
-loo(is_reactance)
 
 ```
 
-```{r report_is_reactance, results='asis', warning=FALSE}
+```{r report_is_reactance, results='asis'}
 
 summarize_brms(
   is_reactance, 
@@ -1122,7 +1083,8 @@ summarize_brms(
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
   model_rownames_random = model_rownames_random,
-  exponentiate = T) %>%
+  exponentiate = T,
+  include_p_direction = T) %>%
   print_df(rows_to_pack = rows_to_pack)
 
 ```
@@ -1135,9 +1097,10 @@ hypothesis(is_reactance, "pressure_self_cw > pushing_self_cw")
 ```
 
 
+
 # Report All Models
 
-```{r report_sidebyside, warning=FALSE}
+```{r report_sidebyside}
 
 
 if (report_ordinal) {
@@ -1147,11 +1110,11 @@ if (report_ordinal) {
   model_rownames_random_final <- model_rownames_random_ordinal
   rows_to_pack_final <- rows_to_pack_ordinal
 } else {
-  model_rows_random_final <- model_rows_random
-  model_rows_fixed_final <- model_rows_fixed
-  model_rownames_fixed_final <- model_rownames_fixed
-  model_rownames_random_final <- model_rownames_random
-  rows_to_pack_final <- rows_to_pack
+  model_rows_random_final <- model_rows_random_hu
+  model_rows_fixed_final <- model_rows_fixed_hu
+  model_rownames_fixed_final <- model_rownames_fixed_hu
+  model_rownames_random_final <- model_rownames_random_hu
+  rows_to_pack_final <- rows_to_pack_hu
 }
 
 
@@ -1161,6 +1124,7 @@ all_models <- report_side_by_side(
   pa_obj_log,
   mood,
   reactance,
+  reactance_ordinal,
   is_reactance,
   
   model_rows_random = model_rows_random_final,
@@ -1174,20 +1138,21 @@ all_models <- report_side_by_side(
 summary_all_models <- all_models %>%
   print_df(rows_to_pack = rows_to_pack_final) %>%
   add_header_above(
-    c(" ", "Subjective MVPA" = 2, 
-      "Device-Based MVPA" = 2, 
-      "Mood" = 2,
-      "Reactance Gaussian" = 2, 
+    c(" ", "Subjective MVPA Hurdle Lognormal" = 2, 
+      "Device-Based MVPA Lognormal" = 2, 
+      "Mood Skewnormal" = 2,
+      "Reactance Lognormal" = 2, 
+      "Reactance Ordinal" = 2,
       "Reactance Dichotome" = 2)
   )
 
 export_xlsx(
   summary_all_models, 
   rows_to_pack = rows_to_pack_final,
-  file.path("Output", "AllModels.xlsx"), 
+  file.path("Output", "AllModels_experimental.xlsx"), 
   merge_option = 'both', 
   simplify_2nd_row = TRUE,
-  colwidths = c(38, 7.2, 13.3, 7.2, 13.3,7.2, 13.3,7.2, 13.3,7.2, 13.3),
+  colwidths = c(38, 7.2, 13.3, 7.2, 13.3, 7.2, 13.3,7.2, 13.3,7.2, 13.3,7.2, 13.3),
   line_above_rows = c(1,2),
   line_below_rows = c(-1)
 )
@@ -1201,12 +1166,13 @@ summary_all_models
 ```{r report_system, results='asis'}
 
 report::report_system()
+report::report_packages()
 report::cite_packages()
 
 ```
 
 
-```{r shut_system_down, results='hide', echo=FALSE, message=FALSE, warning=FALSE}
+```{r shut_system_down, results='hide', echo=FALSE, message=FALSE}
 
 if (shutdown) {
   system("shutdown /s /t 180")
